--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -1,3 +1,8 @@
-<h1>Welcome to Home Page, {{name}}</h1>
+<h1>Welcome to Home Page, <p>{{name}}</p></h1>
 <h2>This is the full home page</h2>
 
+<style>
+    p{
+        color: red;
+    }
+</style>
